debuginfod PR29975 & PR29976: decrease default concurrency

... based on rlimit (rlimig -n NUM)
... based on cpu-affinity (taskset -c A,B,C,D ...)

Signed-off-by: Frank Ch. Eigler <fche@redhat.com>